# verily

./: .gitignore  Cargo.toml  bootstrap.sh
client/: Cargo.toml
client/src/: lib.rs  preferences.rs
client/web/: index.html  package-lock.json  package.json  webpack.config.js
client/web/src/: BookPreferences.tsx  Form.tsx  Preferences.tsx  _headers  index.html  index.tsx  overtake.tsx
data-bundler/: Cargo.toml
data-bundler/src/: lib.rs  main.rs
indices/: Cargo.toml
indices/src/: lib.rs
scripture-types/: Cargo.toml
scripture-types/src/: lib.rs
server/: Cargo.toml  build.rs
