[package]
name = "data-bundler"
version = "0.1.0"
authors = ["neallred <neallred@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0"
regex = "1.3.1"
rust-stemmers = "1.2.0"
serde = { version = "1.0.103", features = ["derive"] }
serde_derive = "1.0.103"  
serde_json = "1.0.42"

scripture-types = { path = "../scripture-types" }
