[package]
name = "scripture-types"
version = "0.1.0"
authors = ["neallred <neallred@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.103", features = ["derive"] }
serde_json = "1.0.42"
serde_derive = "1.0.103"  
fnv = "1.0.6"

[dependencies.wasm-bindgen]
version = "0.2"
features = ["serde-serialize"]
