[package]
name = "server"
version = "0.1.0"
authors = ["neallred <neallred@gmail.com>"]
edition = "2018"
repository = "https://github.com/neallred/verily"
description = "High precision and recall scripture searchng for the web."
license = "GPL-3.0"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rouille = "3.0.0"

[[bin]]
name = "server"
path = "src/main.rs"
